# E-MaoEngine

./: .gitignore  001.py  CMakeLists.txt  MirrorEngineGL.vcxproj  MirrorEngineGL.vcxproj.filters  README.md  all_files.txt  directory_tree.txt  imgui.ini
3Dtiles/: B3DMLoader.cpp  B3DMLoader.h  GLBParser.cpp  GLBParser.h  GLTF1Parser.cpp  GLTF1Parser.h  TileNode.h  TilesetLoader.cpp  TilesetLoader.h  TilesetParser.cpp  TilesetParser.h
Assets/Test Case/01/: scenetree.json  tileset.json
Assets/Test Case/YLCS/: tileset.json
Shaders/: Model.fs  Model.vs  basic_F.shader  basic_V.shader  default_F.shader  default_V.shader
Src/: Common.h  Mian.cpp
Src/Gui/: DockLayout.cpp  DockLayout.h  GUIControls.cpp  GUIControls.h  ImGuiManager.cpp  ImGuiManager.h  Imgui_utils.cpp  Imgui_utils.h
Src/Render/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Entity.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Opengl_Utils.cpp  Opengl_Utils.h  ProgressiveLOD.cpp  ProgressiveLOD.h  SceneManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Transform.h  Vertex.h
Src/Render/Material/: BasicMaterial.cpp  DefaultMaterial.cpp  DerivedMaterials.h  Material.cpp  Material.h
Src/Resources/: stb_impl.cpp  stb_impl.h
TestResources/: Cube.h  Geometry.h  OBJLoader.cpp  OBJLoader.h  Triangle.h
include/: Common.h
include/3Dtiles/: B3DMLoader.h  GLBParser.h  GLTF1Parser.h
include/Core/: EndianUtils.h
include/Gui/: GUIControls.h  ImGuiManager.h
include/Render/: Camera.h  CameraController.h  Entity.h  Framebuffer.h  Opengl_Utils.h  SceneManager.h  Texture.h  Vertex.h
include/Render/Light/: Light.h
include/TestResources/: Cube.h  Geometry.h  OBJLoader.h
src/: Main.cpp
src/3Dtiles/: GLBParser.cpp  GLTF1Parser.cpp  TilesetParser.cpp
src/Gui/: GUIControls.cpp  ImGuiManager.cpp
src/Render/: Camera.cpp  CameraController.cpp  Framebuffer.cpp  Mesh.cpp  Opengl_Utils.cpp  ProgressiveLOD.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp
src/Render/Material/: Material.cpp
src/Resources/: stb_impl.cpp
src/TestResources/: OBJLoader.cpp
